--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 
 </head>
 <body>
-
+    <header class="header">
+        <h1 class="header__title">Este es un titulo</h1>
+        <p class="header__parrafo"></p>
+    </header>
+    <main class="main">
+        <H2 class="main__title"> Este es otro titulo</H2>
+        <p class="main__parrafo"></p>
+    </main>
 </body>
 </html>
