--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header class="header">
         <h1 class="header__title">Este es un titulo</h1>
-        <p class="header__parrafo"></p>
+        <p class="header__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatibus reprehenderit quia sunt non animi magnam provident doloribus magni ab. Provident sint animi praesentium in dolores nisi consequatur, inventore ad!</p>
     </header>
     <main class="main">
         <H2 class="main__title"> Este es otro titulo</H2>
-        <p class="main__parrafo"></p>
+        <p class="main__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima animi odit, asperiores, maxime deleniti doloremque delectus dolorem nobis laudantium, magnam quam ad cum. Soluta id praesentium, ab excepturi iusto culpa.</p>
     </main>
 </body>
 </html>
