Terminado el boton del header parte del logo y empezando la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__title">Este es un titulo</h1>
-        <p class="header__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatibus reprehenderit quia sunt non animi magnam provident doloribus magni ab. Provident sint animi praesentium in dolores nisi consequatur, inventore ad!</p>
+        <div class="header__container">
+            <figure class="header__logo">
+
+            </figure>
+            <nav class="header__nav">
+                <label class="header__nav--name">Buscar</label>
+                <input type="text" class="header__nav--buscador" placeholder="buscar">
+                <ul class="header__list">
+                    <li class="header__item"><a href="#" class="header__link"></a></li>
+                    <li><a href="#"></a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main class="main">
-        <H2 class="main__title"> Este es otro titulo</H2>
-        <p class="main__parrafo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima animi odit, asperiores, maxime deleniti doloremque delectus dolorem nobis laudantium, magnam quam ad cum. Soluta id praesentium, ab excepturi iusto culpa.</p>
-    </main>
 </body>
 </html>
