terminado el header

--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
     <header class="header">
         <div class="header__container">
             <figure class="header__logo">
-
+                <div class="header__logo--img"></div>
             </figure>
             <nav class="header__nav">
-                <label class="header__nav--name">Buscar</label>
-                <input type="text" class="header__nav--buscador" placeholder="buscar">
+                <label class="header__nav--name" for ="buscar">Buscar </label> <input type="text" class="header__nav--buscador" id = "buscar"placeholder="buscar">
+               
                 <ul class="header__list">
-                    <li class="header__item"><a href="#" class="header__link"></a></li>
-                    <li><a href="#"></a></li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                            Home    
+                        </a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">
+                           Menu 
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
