se añadio una parte del main

--- a/index.html
+++ b/index.html
@@ -32,5 +32,22 @@
             </nav>
         </div>
     </header>
+    <main class="main">
+        <section class="main__box__container">
+            <div class="main__box--blue">
+                <h2>Te ayudamos a vender tus productos</h2>
+                <p>Se el numero uno en ventas en lo que sea que quieras vender</p>
+            </div>
+            <div class="main__box--blue">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia magni consequatur delectus ullam, cumque iusto odit, esse fugit nam aspernatur suscipit voluptatibus sapiente incidunt magnam amet est? Quidem, sapiente aliquam!</p>
+            </div>
+        </section>
+        <section class="main__box__container--whitebox">
+            <div class="main__box--white">
+                <h2>Titulo de lo que sea</h2>
+                <p>texto Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quasi ea excepturi deserunt! Veniam obcaecati quo voluptatum rem saepe pariatur corrupti eveniet sed reiciendis tempora laborum, ratione unde officiis quos!</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
