se le agrego un titulo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Mi primer diseño de github pages</title>
 </head>
 <body>
-    
+    <h1>Este es un git hub con github pages</h1>
 </body>
 </html>
