Se hizo plantilla password o usuario invalido email invalido y recuperar contraseña

--- a/Curso-Front-End-Developer/index.html
+++ b/Curso-Front-End-Developer/index.html
@@ -35,5 +35,42 @@
             </form> 
         </div>
     </article> 
+    <article class="login__box">
+        <div class="login__container">
+            <img class="logo__img" src="./logos/logo_yard_sale.svg" alt="Logo">
+            <form action="#" class="form__container">
+                <label for="Email" class="login__title login__valid--mail">
+                    Enter a valid mail
+                </label>
+                <input id ="Email" class="login__input input__login--invalid" type="text" placeholder="sona@gmail.com">
+                <label for ="Password" class="login__title login__title--invalid">
+                    Password
+                </label>
+                <input id ="Password" class="login__input" type="text" placeholder="*********">
+                <button class="primary__button .button--invalid">Log in</button>
+                <a class="login_link">
+                    Forgot my password
+                </a>
+                <button class="primary__button" type="button">Sign up</button>
+            </form> 
+        </div>
+    </article> 
+    <article class="login__box">
+        <div class="login__container">
+            <img class="logo__img" src="./logos/logo_yard_sale.svg" alt="Logo">
+            <form action="#" class="form__container form--email">
+                <h1 class="login__title-pass-recovery">Password recovery</h1>
+                <p class="login__text-pass-recovery">Inform the email address used to create your account</p>
+                <label for="Email" class="login__title login__password--recover">
+                    Email address
+                </label>
+                <input id ="Email" class="login__input input__email" type="text" placeholder="sona@gmail.com">
+                <button class="primary__button button--email-submit">Submit</button>
+                <a class="login_link login__link--pass-recovery">
+                    Back to log in
+                </a>
+            </form> 
+        </div>
+    </article> 
 </body>
 </html>
