terminados los menus desktop mobile

--- a/Curso-Front-End-Developer/Home.html
+++ b/Curso-Front-End-Developer/Home.html
@@ -14,17 +14,127 @@
     
 </head>
 <body>
-    <section class="main__container">
+    <section class="menu__container">
         <article class="cards__container">
             <div class="Product__card">
-                <img src="./imagenes/Celular.png" alt="">
-            <div>
-                <p>$ 120,00</p>
-                <p> Round Shelf</p>
-                <figure>
-                    <img src="./icons/bt_add_to_cart.svg" alt="">
-                </figure>
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
             </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
+            </div>
+            <div class="Product__card">
+                <img src="./imagenes/Celular.png" alt="celular">
+                <div class="product__info">
+                    <div class="Product__text-price">
+                    <p>$ 120,00</p>
+                    <p> Round Shelf</p>
+                    </div>
+                    <figure class="Icon__container">
+                        <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                    </figure>
+                </div>
             </div>
         </article>    
     </section>
