clase 2 terminada menus

--- a/Curso-Practico-JavaScript/index.html
+++ b/Curso-Practico-JavaScript/index.html
@@ -15,15 +15,56 @@
         <nav class="navbar--mobile">
             <ul class="navbar__list">
                 <li class="navbar__item">
-                        <img class="navbar__icon" src="./icons/icon_menu.svg" alt="Menu">
+                        <img class="navbar--mobile__icon" src="./icons/icon_menu.svg" alt="Menu">
                 </li>
                 <li class="navbar__item">    
                         <img class="navbar__logo" src="./logos/logo_yard_sale.svg" alt="logo">
                 </li>
                 <li class="navbar__item">
-                        <img class="navbar__icon" src="./icons/icon_shopping_cart_notification.svg" alt="shop car">
+                        <img class="navbar--mobile__icon" src="./icons/icon_shopping_cart_notification.svg" alt="shop car">
                 </li>
             </ul>
+            <div class="mobile-menu inactive">
+                <section class="mobile-menu__bar">
+                    <ul>
+                        <li>
+                            <a href="#">Categories</a>
+                        </li>
+                        <li>
+                            <a href="#">All</a>
+                        </li>
+                        <li>
+                            <a href="#">Clothes</a>
+                        </li>
+                        <li>
+                            <a href="#">Electronics</a>
+                        </li>
+                        <li>
+                            <a href="#">Furnitures</a>
+                        </li>
+                        <li>
+                            <a href="#">Toys</a>
+                        </li>
+                        <li>
+                            <a href="#">Others</a>
+                        </li>
+                    </ul>    
+                </section>
+                <section class="mobile-menu__bar">
+                    <ul>
+                        <li>
+                            <a href="#">My orders</a>
+                        </li>
+                        <li>
+                            <a href="#">My account</a>
+                        </li>
+                        <li>
+                        <p>camilayokoo@gmail.com</p>
+                        <a href="#">Sign out</a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </nav>
         <nav class="navbar--desktop">
             <ul class="navbar--left">
@@ -31,22 +72,22 @@
                     <img src="./logos/logo_yard_sale.svg" alt="">
                 </figure>
                 <li>
-                    <a href="">All</a>
+                    <a href="#">All</a>
                 </li>
                 <li>
-                    <a href="">Clothes</a>
+                    <a href="#">Clothes</a>
                 </li>
                 <li>
-                    <a href="">Electronics</a>
+                    <a href="#">Electronics</a>
                 </li>
                 <li>
-                    <a href="">Furniture</a>
+                    <a href="#">Furniture</a>
                 </li>
                 <li>
-                    <a href="">Toys</a>
+                    <a href="#">Toys</a>
                 </li>
                 <li>
-                    <a href="">Others</a>
+                    <a href="#">Others</a>
                 </li>
             </ul>
             <ul class="navbar--right">
