--- a/Curso-Front-End-Developer/Mobile-menu.html
+++ b/Curso-Front-End-Developer/Mobile-menu.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <main class="mobile-menu">
+    <div class="mobile-menu">
         <section class="mobile-menu__bar">
             <ul>
                 <li>
@@ -50,6 +50,6 @@
                 </li>
             </ul>
         </section>
-    </main>
+    </div>
 </body>
 </html>
