terminada clase lista de productos a partir de arrays

--- a/Curso-Practico-JavaScript/index.html
+++ b/Curso-Practico-JavaScript/index.html
@@ -134,6 +134,22 @@
                 <button class="primary__button">Checkout</button>
             </aside>
         </div>
+        <section class="menu__container">
+            <article class="cards__container">
+                <!-- <div class="Product__card">
+                    <img src="./imagenes/Celular.png" alt="celular">
+                    <div class="product__info">
+                        <div class="Product__text-price">
+                        <p>$ 120,00</p>
+                        <p> Round Shelf</p>
+                        </div>
+                        <figure class="Icon__container">
+                            <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
+                        </figure>
+                    </div>
+                </div> -->
+            </article>    
+        </section>
     </main>
     <script src="scripts.js"></script>
 </body>
