terminada la clase detalles de producto

--- a/Curso-Practico-JavaScript/index.html
+++ b/Curso-Practico-JavaScript/index.html
@@ -136,20 +136,22 @@
         </div>
         <section class="menu__container">
             <article class="cards__container">
-                <!-- <div class="Product__card">
-                    <img src="./imagenes/Celular.png" alt="celular">
-                    <div class="product__info">
-                        <div class="Product__text-price">
-                        <p>$ 120,00</p>
-                        <p> Round Shelf</p>
-                        </div>
-                        <figure class="Icon__container">
-                            <img src="./icons/bt_add_to_cart.svg" alt="shopp car">
-                        </figure>
-                    </div>
-                </div> -->
             </article>    
         </section>
+        <div class="product__detail__container inactive">
+            <aside class="product__detail">
+            <div class="product__detail__close">
+                <img src="./icons/icon_close.png" alt="icon close">
+            </div>
+            <img src="./imagenes/Celular.png" alt="celular">
+            </aside>
+            <div class="product__detail--product__info">
+                <p>$ 1500.00</p>
+                <p>xiaomi redmi note 11</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint tempore provident eveniet minus eius ullam illum velit voluptates quia quod maiores ad omnis excepturi vero quaerat error aperiam, consequatur nulla!</p>
+                <button class="product__detail--primary__button"> <img src="./icons/bt_add_to_cart.svg" alt=""> add to cart</button>
+            </div>
+        </div>
     </main>
     <script src="scripts.js"></script>
 </body>
